--- a/src/app/modules/admin/admin-booking/admin-booking.component.html
+++ b/src/app/modules/admin/admin-booking/admin-booking.component.html
@@ -5,16 +5,15 @@
             <div class="">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-sm-start pt-2 pb-1 mb-2 border-bottom">
-                    <h3 class="font-monospace fw-bold ">จัดการข้อมูลสินค้า</h3>
+                    <h3 class="font-monospace fw-bold ">ข้อมูลจอง</h3>
                     <div class="btn-group">
-                        <button type="button" class="btn-sm btn-success">
-                            + เพิ่มสินค้าใหม่ </button>
+
                     </div>
                 </div>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a routerLink="home">หน้าแรก</a></li>
-                        <li class="breadcrumb-item active" aria-current="#">สินค้าของฉัน</li>
+                        <li class="breadcrumb-item active" aria-current="#">จัดการข้อมูลการจอง</li>
                     </ol>
                 </nav>
 
@@ -25,7 +24,7 @@
                             <div class="card-header">
                                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center text-dark "
                                     style="padding-right: 50px; padding-left: 2px;">
-                                    <h4 class="font-monospace fw-bold">รายการสินค้า</h4>
+                                    <h4 class="font-monospace fw-bold">รายการข้อมูลจอง</h4>
                                     <div class="btn-toolbar mb-2 mb-md-0">
                                         <div class="col-md-12 col">
                                             <div class="input-group">
@@ -142,8 +141,7 @@
                             <label for="validationCustom04" class="col-sm-auto col-form-label">ราคา</label>
                             <div class="col-md-3">
                                 <input type="text" class="form-control" id="recipient-name" formControlName="bookPre">
-                                <button type="submit" class="btn-sm btn-danger"
-                                    >อนุมัติ</button>&nbsp;
+                                <button type="submit" class="btn-sm btn-danger">อนุมัติ</button>&nbsp;
 
                             </div>
                         </div>
