--- a/src/app/modules/customer/cust-manage/cust-manage.component.html
+++ b/src/app/modules/customer/cust-manage/cust-manage.component.html
@@ -1,1 +1,231 @@
-<p>cust-manage works!</p>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container">
+    <div class="row">
+        <div class="well">
+            <h1 class="text-center">เมนูอาหาร</h1>
+            <div class="list-group">
+
+                <a href="#" class="list-group-item">
+                    <div class="media col-md-3">
+                        <figure class="pull-left">
+                            <img class="media-object img-rounded img-responsive"
+                                src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t39.30808-6/299195209_494301679364770_1064920369147834705_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeH4t5DAbtv-6TA36xy-1oT0IotkKDmWifgii2QoOZaJ-LduYnV_j0AaEUnUsQiFUjai3nbjHomdavew5vGJxipP&_nc_ohc=WdZZO5FXfy8AX_2A7Hu&_nc_zt=23&_nc_ht=scontent.fbkk22-2.fna&oh=00_AT9JGYtqjuOmJIIm85uZcZ4-yG5c80DmlSKMnIvWybDcVg&oe=63060769"
+                                alt="placehold.it/350x250">
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="list-group-item-heading"> กุ้งผัดพริกขี้หนู </h4>
+                        <p class="list-group-item-text">   เมนู​​เนื้อกุ้งผัดพริกขี้หนู รสเผ็ดใคร ๆ ก็ชอบ เพราะส่วนผสมน้อยและทำไม่ยาก กระปุกดอทคอมขอนำเสนอวิธีทำกุ้งผัดพริกขี้หนู สูตรจาก คุณมอแกนน้อย สมาชิกเว็บไซต์พันทิปดอทคอม หั่นชิ้นกุ้งพอคำแล้วเอาไปผัดกับพริกและกระเทียมพอสุกเด้ง ปรุงรสเค็มหวานนิดหน่อย กินกับข้าวสวยอร่อยล้ำ
+                        </p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="stars">
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star-empty"></span>
+                        </div>
+
+
+
+                        <p> คะแนน 3.9 <small> / </small> 5 </p>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item">
+                    <div class="media col-md-3">
+                        <figure class="pull-left">
+                            <img class="media-object img-rounded img-responsive"
+                                src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t39.30808-6/299195209_494301679364770_1064920369147834705_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeH4t5DAbtv-6TA36xy-1oT0IotkKDmWifgii2QoOZaJ-LduYnV_j0AaEUnUsQiFUjai3nbjHomdavew5vGJxipP&_nc_ohc=WdZZO5FXfy8AX_2A7Hu&_nc_zt=23&_nc_ht=scontent.fbkk22-2.fna&oh=00_AT9JGYtqjuOmJIIm85uZcZ4-yG5c80DmlSKMnIvWybDcVg&oe=63060769"
+                                alt="placehold.it/350x250">
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="list-group-item-heading"> กุ้งผัดพริกขี้หนู </h4>
+                        <p class="list-group-item-text">   เมนู​​เนื้อกุ้งผัดพริกขี้หนู รสเผ็ดใคร ๆ ก็ชอบ เพราะส่วนผสมน้อยและทำไม่ยาก กระปุกดอทคอมขอนำเสนอวิธีทำกุ้งผัดพริกขี้หนู สูตรจาก คุณมอแกนน้อย สมาชิกเว็บไซต์พันทิปดอทคอม หั่นชิ้นกุ้งพอคำแล้วเอาไปผัดกับพริกและกระเทียมพอสุกเด้ง ปรุงรสเค็มหวานนิดหน่อย กินกับข้าวสวยอร่อยล้ำ
+                        </p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="stars">
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star-empty"></span>
+                        </div>
+
+
+
+                        <p> คะแนน 3.9 <small> / </small> 5 </p>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item">
+                    <div class="media col-md-3">
+                        <figure class="pull-left">
+                            <img class="media-object img-rounded img-responsive"
+                                src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t39.30808-6/299195209_494301679364770_1064920369147834705_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeH4t5DAbtv-6TA36xy-1oT0IotkKDmWifgii2QoOZaJ-LduYnV_j0AaEUnUsQiFUjai3nbjHomdavew5vGJxipP&_nc_ohc=WdZZO5FXfy8AX_2A7Hu&_nc_zt=23&_nc_ht=scontent.fbkk22-2.fna&oh=00_AT9JGYtqjuOmJIIm85uZcZ4-yG5c80DmlSKMnIvWybDcVg&oe=63060769"
+                                alt="placehold.it/350x250">
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="list-group-item-heading"> กุ้งผัดพริกขี้หนู </h4>
+                        <p class="list-group-item-text">   เมนู​​เนื้อกุ้งผัดพริกขี้หนู รสเผ็ดใคร ๆ ก็ชอบ เพราะส่วนผสมน้อยและทำไม่ยาก กระปุกดอทคอมขอนำเสนอวิธีทำกุ้งผัดพริกขี้หนู สูตรจาก คุณมอแกนน้อย สมาชิกเว็บไซต์พันทิปดอทคอม หั่นชิ้นกุ้งพอคำแล้วเอาไปผัดกับพริกและกระเทียมพอสุกเด้ง ปรุงรสเค็มหวานนิดหน่อย กินกับข้าวสวยอร่อยล้ำ
+                        </p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="stars">
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star-empty"></span>
+                        </div>
+
+
+
+                        <p> คะแนน 3.9 <small> / </small> 5 </p>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item">
+                    <div class="media col-md-3">
+                        <figure class="pull-left">
+                            <img class="media-object img-rounded img-responsive"
+                                src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t39.30808-6/299195209_494301679364770_1064920369147834705_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeH4t5DAbtv-6TA36xy-1oT0IotkKDmWifgii2QoOZaJ-LduYnV_j0AaEUnUsQiFUjai3nbjHomdavew5vGJxipP&_nc_ohc=WdZZO5FXfy8AX_2A7Hu&_nc_zt=23&_nc_ht=scontent.fbkk22-2.fna&oh=00_AT9JGYtqjuOmJIIm85uZcZ4-yG5c80DmlSKMnIvWybDcVg&oe=63060769"
+                                alt="placehold.it/350x250">
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="list-group-item-heading"> กุ้งผัดพริกขี้หนู </h4>
+                        <p class="list-group-item-text">   เมนู​​เนื้อกุ้งผัดพริกขี้หนู รสเผ็ดใคร ๆ ก็ชอบ เพราะส่วนผสมน้อยและทำไม่ยาก กระปุกดอทคอมขอนำเสนอวิธีทำกุ้งผัดพริกขี้หนู สูตรจาก คุณมอแกนน้อย สมาชิกเว็บไซต์พันทิปดอทคอม หั่นชิ้นกุ้งพอคำแล้วเอาไปผัดกับพริกและกระเทียมพอสุกเด้ง ปรุงรสเค็มหวานนิดหน่อย กินกับข้าวสวยอร่อยล้ำ
+                        </p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="stars">
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star-empty"></span>
+                        </div>
+
+
+
+                        <p>คะแนน 3.9 <small> / </small> 5 </p>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item">
+                    <div class="media col-md-3">
+                        <figure class="pull-left">
+                            <img class="media-object img-rounded img-responsive"
+                                src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t39.30808-6/299195209_494301679364770_1064920369147834705_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeH4t5DAbtv-6TA36xy-1oT0IotkKDmWifgii2QoOZaJ-LduYnV_j0AaEUnUsQiFUjai3nbjHomdavew5vGJxipP&_nc_ohc=WdZZO5FXfy8AX_2A7Hu&_nc_zt=23&_nc_ht=scontent.fbkk22-2.fna&oh=00_AT9JGYtqjuOmJIIm85uZcZ4-yG5c80DmlSKMnIvWybDcVg&oe=63060769"
+                                alt="placehold.it/350x250">
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="list-group-item-heading"> กุ้งผัดพริกขี้หนู </h4>
+                        <p class="list-group-item-text">   เมนู​​เนื้อกุ้งผัดพริกขี้หนู รสเผ็ดใคร ๆ ก็ชอบ เพราะส่วนผสมน้อยและทำไม่ยาก กระปุกดอทคอมขอนำเสนอวิธีทำกุ้งผัดพริกขี้หนู สูตรจาก คุณมอแกนน้อย สมาชิกเว็บไซต์พันทิปดอทคอม หั่นชิ้นกุ้งพอคำแล้วเอาไปผัดกับพริกและกระเทียมพอสุกเด้ง ปรุงรสเค็มหวานนิดหน่อย กินกับข้าวสวยอร่อยล้ำ
+                        </p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="stars">
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star-empty"></span>
+                        </div>
+
+
+
+                        <p> คะแนน 3.9 <small> / </small> 5 </p>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item">
+                    <div class="media col-md-3">
+                        <figure class="pull-left">
+                            <img class="media-object img-rounded img-responsive"
+                                src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t39.30808-6/299195209_494301679364770_1064920369147834705_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeH4t5DAbtv-6TA36xy-1oT0IotkKDmWifgii2QoOZaJ-LduYnV_j0AaEUnUsQiFUjai3nbjHomdavew5vGJxipP&_nc_ohc=WdZZO5FXfy8AX_2A7Hu&_nc_zt=23&_nc_ht=scontent.fbkk22-2.fna&oh=00_AT9JGYtqjuOmJIIm85uZcZ4-yG5c80DmlSKMnIvWybDcVg&oe=63060769"
+                                alt="placehold.it/350x250">
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="list-group-item-heading"> กุ้งผัดพริกขี้หนู </h4>
+                        <p class="list-group-item-text"> E  เมนู​​เนื้อกุ้งผัดพริกขี้หนู รสเผ็ดใคร ๆ ก็ชอบ เพราะส่วนผสมน้อยและทำไม่ยาก กระปุกดอทคอมขอนำเสนอวิธีทำกุ้งผัดพริกขี้หนู สูตรจาก คุณมอแกนน้อย สมาชิกเว็บไซต์พันทิปดอทคอม หั่นชิ้นกุ้งพอคำแล้วเอาไปผัดกับพริกและกระเทียมพอสุกเด้ง ปรุงรสเค็มหวานนิดหน่อย กินกับข้าวสวยอร่อยล้ำ
+                        </p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="stars">
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star-empty"></span>
+                        </div>
+
+
+
+                        <p> คะแนน 3.9 <small> / </small> 5 </p>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item">
+                    <div class="media col-md-3">
+                        <figure class="pull-left">
+                            <img class="media-object img-rounded img-responsive"
+                                src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t39.30808-6/299195209_494301679364770_1064920369147834705_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeH4t5DAbtv-6TA36xy-1oT0IotkKDmWifgii2QoOZaJ-LduYnV_j0AaEUnUsQiFUjai3nbjHomdavew5vGJxipP&_nc_ohc=WdZZO5FXfy8AX_2A7Hu&_nc_zt=23&_nc_ht=scontent.fbkk22-2.fna&oh=00_AT9JGYtqjuOmJIIm85uZcZ4-yG5c80DmlSKMnIvWybDcVg&oe=63060769"
+                                alt="placehold.it/350x250">
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="list-group-item-heading"> กุ้งผัดพริกขี้หนู </h4>
+                        <p class="list-group-item-text">   เมนู​​เนื้อกุ้งผัดพริกขี้หนู รสเผ็ดใคร ๆ ก็ชอบ เพราะส่วนผสมน้อยและทำไม่ยาก กระปุกดอทคอมขอนำเสนอวิธีทำกุ้งผัดพริกขี้หนู สูตรจาก คุณมอแกนน้อย สมาชิกเว็บไซต์พันทิปดอทคอม หั่นชิ้นกุ้งพอคำแล้วเอาไปผัดกับพริกและกระเทียมพอสุกเด้ง ปรุงรสเค็มหวานนิดหน่อย กินกับข้าวสวยอร่อยล้ำ
+                        </p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="stars">
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star-empty"></span>
+                        </div>
+
+
+
+                        <p> คะแนน 3.9 <small> / </small> 5 </p>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item">
+                    <div class="media col-md-3">
+                        <figure class="pull-left">
+                            <img class="media-object img-rounded img-responsive"
+                                src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t39.30808-6/299195209_494301679364770_1064920369147834705_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeH4t5DAbtv-6TA36xy-1oT0IotkKDmWifgii2QoOZaJ-LduYnV_j0AaEUnUsQiFUjai3nbjHomdavew5vGJxipP&_nc_ohc=WdZZO5FXfy8AX_2A7Hu&_nc_zt=23&_nc_ht=scontent.fbkk22-2.fna&oh=00_AT9JGYtqjuOmJIIm85uZcZ4-yG5c80DmlSKMnIvWybDcVg&oe=63060769"
+                                alt="placehold.it/350x250">
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="list-group-item-heading"> กุ้งผัดพริกขี้หนู </h4>
+                        <p class="list-group-item-text">   เมนู​​เนื้อกุ้งผัดพริกขี้หนู รสเผ็ดใคร ๆ ก็ชอบ เพราะส่วนผสมน้อยและทำไม่ยาก กระปุกดอทคอมขอนำเสนอวิธีทำกุ้งผัดพริกขี้หนู สูตรจาก คุณมอแกนน้อย สมาชิกเว็บไซต์พันทิปดอทคอม หั่นชิ้นกุ้งพอคำแล้วเอาไปผัดกับพริกและกระเทียมพอสุกเด้ง ปรุงรสเค็มหวานนิดหน่อย กินกับข้าวสวยอร่อยล้ำ
+                        </p>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="stars">
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star-empty"></span>
+                        </div>
+
+
+
+                        <p> คะแนน 4.1 <small> / </small> 5 </p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
