--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,41 +1,72 @@
-<div class="wrapper bg-danger">
-  <div class="container">
-    <div class="row h-100 justify-content-between align-items-center">
-      <div class="col-sm-12 col-md-12 col-lg-12">
-        <div class="text-center">
-          <h1 class="mt-5">Welcome To The Deink Of Love</h1>
-          <p>ยินดีต้อนรับเข้าสู่ร้านอาหาร
-            The Deink Of Love
-          </p>
-        </div>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+<div class="container-fluid" style="min-height: 641px;">
+
+  <div class="card-body" style="width: 97%; margin: 0px auto;">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide top-2 carousel carousel-slider center"
+      data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
       </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-
-
-<!-- <section class="wrapper fixed-top">
-  <div class="overlays"></div>
-  <div class="container h-100">
-    <div class="row h-100 justify-content-between align-items-center">
-      <div class="col-lg-12">
-        <div class="text-center">
-          <h1 class="mt-5">Welcome To The Deink Of Love</h1>
-          <p>ยินดีต้อนรับเข้าสู่ร้านอาหาร
-            Tne Deink Of Love
-          </p>
-          <button class="btn btn-success btn-outline  mt-5">จองโต๊ะ</button>
-
-
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="4000">
+          <img src="https://scontent.fbkk22-3.fna.fbcdn.net/v/t39.30808-6/271781079_2013739775453673_7141171038872847499_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeH9DcTUYlA23i_2NdrZtqRt7_sFatJ_QFbv-wVq0n9AVibBrik0mXmQguCtTlfwU5iwWngdR8FZ_BJhjgabh5B7&_nc_ohc=e7NlBRh0dGQAX-19-3N&_nc_zt=23&_nc_ht=scontent.fbkk22-3.fna&oh=00_AT9NtzrAjf1cJQdZ6tNJ_osXND1x6iO-0zJyhD9v8ovDug&oe=630548D9" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
         </div>
 
+        <div class="carousel-item" data-bs-interval="4000">
+          <img src="https://scontent.fbkk22-3.fna.fbcdn.net/v/t39.30808-6/278370241_408048511323421_659438882935072425_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeE7kzA02ewWG0JQIfFTrHqWmfWU4mjpLmiZ9ZTiaOkuaM3GEp1ttxycu8bUgxj3OuW7sRxkV2y7yOIyHSDljgJM&_nc_ohc=ttpN1aq8q5MAX8kyH1W&_nc_zt=23&_nc_ht=scontent.fbkk22-3.fna&oh=00_AT-_BJhg_T6rqfb_cibt_Vt50ZQraMrLhsYQTV3RJr-Rlw&oe=6305141B" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
 
+        <div class="carousel-item" data-bs-interval="4000">
+          <img src="https://scontent.fbkk22-8.fna.fbcdn.net/v/t39.30808-6/277771649_2076759962484987_4498327655157513057_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGimg06ZxUkZXFo7XDfZz3h3nh6QPq4YdXeeHpA-rhh1f5vPfJuxipSLi-iav5umgauEb1sXl1UtzOtx3nK6AdI&_nc_ohc=x_z6YnZgFCcAX8MjQyZ&_nc_zt=23&_nc_ht=scontent.fbkk22-8.fna&oh=00_AT8klg2XKU0TanpQoAQOQ2eYnXlIV5IdMpRZRyGH76Ewmw&oe=6305D5C1" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+     
+ 
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </div>
-</section> -->
+  <div id="home" class="w3-content">
+
+    <!-- Members -->
+    <div id="members" class="w3-container w3-padding-32">
+    <h2 class="w3-center">เมนูเด็ด</h2>
+    <br>
+    <div class="w3-row w3-center">
+    
+    <div class="w3-third">
+    <img src="https://scontent.fbkk22-3.fna.fbcdn.net/v/t39.30808-6/277759104_2073301962830787_4689598156145238799_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGZsThQT8KiejFBFOAiC5seSwJZdu4HPTZLAll27gc9NvZlt6zkJneKEuoIC4R2JpsrMwX0SunmrN7rv-3Y1jJq&_nc_ohc=eAEhNYbe0t4AX-VyNSU&_nc_zt=23&_nc_ht=scontent.fbkk22-3.fna&oh=00_AT9mRqQCavMpFNUsucQBz8l9Z4IC4DyvbcjZsaIv_HeUMA&oe=6304B158" alt="Name1" style="width:90%">
+    </div>
+    
+    <div class="w3-third">
+    <img src="https://scontent.fbkk22-3.fna.fbcdn.net/v/t39.30808-6/277759104_2073301962830787_4689598156145238799_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGZsThQT8KiejFBFOAiC5seSwJZdu4HPTZLAll27gc9NvZlt6zkJneKEuoIC4R2JpsrMwX0SunmrN7rv-3Y1jJq&_nc_ohc=eAEhNYbe0t4AX-VyNSU&_nc_zt=23&_nc_ht=scontent.fbkk22-3.fna&oh=00_AT9mRqQCavMpFNUsucQBz8l9Z4IC4DyvbcjZsaIv_HeUMA&oe=6304B158" alt="Name2" style="width:90%">
+    </div>
+    
+    <div class="w3-third">
+    <img src="https://scontent.fbkk22-3.fna.fbcdn.net/v/t39.30808-6/277759104_2073301962830787_4689598156145238799_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGZsThQT8KiejFBFOAiC5seSwJZdu4HPTZLAll27gc9NvZlt6zkJneKEuoIC4R2JpsrMwX0SunmrN7rv-3Y1jJq&_nc_ohc=eAEhNYbe0t4AX-VyNSU&_nc_zt=23&_nc_ht=scontent.fbkk22-3.fna&oh=00_AT9mRqQCavMpFNUsucQBz8l9Z4IC4DyvbcjZsaIv_HeUMA&oe=6304B158" alt="Name3" style="width:90%">
+    </div>
+    
+    </div>
+    </div>
+    
+    <!-- End Content -->
+    </div>
+    
+    
