--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,28 +19,28 @@
           <a class="nav-link" href="home/login">เข้าสู่ระบบ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ลงทะเบียน</a>
+          <a class="nav-link" href="home/register">ลงทะเบียน</a>
         </li>
       </ul>
 
 
     </div>
   </header>
-  <nav class="navbar navbar-expand-lg sticky-top text-center" id="up" style="background-color: #757377;">
+  <nav class="navbar navbar-expand-lg sticky-top text-center" id="up" style="background-color: #00000090;">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="home">หน้าแรก <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">บรรยกาศร้าน</a>
+          <a class="nav-link" href="customer/atmosphere">บรรยกาศร้าน</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">เมนู</a>
+          <a class="nav-link" href="customer/manage">เมนู</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">เกี่ยวกับเรา</a>
+          <a class="nav-link" href="customer/manage">เกี่ยวกับเรา</a>
         </li>
       </ul>
 
@@ -111,8 +111,7 @@
           </li>
         </ul>
         
-      
-
+    
 
       </div>
     </nav>
@@ -152,23 +151,27 @@
         </ul>
       </div>
     </header>
-    <nav class="navbar navbar-expand-lg sticky-top text-center" id="up" style="background-color: #757377;">
+    <nav class="navbar navbar-expand-lg sticky-top text-center" id="up" style="background-color: #7573773f;">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="home">หน้าแรก <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">บรรยกาศร้าน</a>
+            <a class="nav-link" href="customer/atmosphere">บรรยากาศร้าน</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">เมนู</a>
+            <a class="nav-link" href="customer/manage">เมนู</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">เกี่ยวกับเรา</a>
+            <a class="nav-link" href="customer/aboutus">เกี่ยวกับเรา</a>
           </li>
         </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="customer/edit">แก้ไขข้อมูลส่วนตัว</a>
+        </li>
+      
 
 
       </div>
